<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>CYAxisSettingForm</class>
 <widget class="QWidget" name="CYAxisSettingForm">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>554</width>
    <height>493</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
      <widget class="QLabel" name="scaleLabel">
       <property name="text">
        <string>初始比例</string>
       </property>
       <property name="buddy">
        <cstring>scaleLineEdit</cstring>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="QLineEdit" name="scaleLineEdit"/>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string>主等分数</string>
       </property>
       <property name="buddy">
        <cstring>mainBisectrixLineEdit</cstring>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
      <widget class="QLineEdit" name="mainBisectrixLineEdit">
       <property name="toolTip">
        <string>有效值为 1~50的整数</string>
       </property>
      </widget>
     </item>
     <item row="1" column="2">
      <widget class="QPushButton" name="mainBisectrixButton">
       <property name="text">
        <string>主等分线</string>
       </property>
      </widget>
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="label_3">
       <property name="text">
        <string>次等分数</string>
       </property>
       <property name="buddy">
        <cstring>secondaryBisectrixLineEdit</cstring>
       </property>
      </widget>
     </item>
     <item row="2" column="1">
      <widget class="QLineEdit" name="secondaryBisectrixLineEdit">
       <property name="toolTip">
        <string>有效值为 1~50的整数</string>
       </property>
      </widget>
     </item>
     <item row="2" column="2">
      <widget class="QPushButton" name="secondaryBisectrixButton">
       <property name="text">
        <string>次等分线</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QTableWidget" name="axisTableWidget">
     <property name="autoFillBackground">
      <bool>true</bool>
     </property>
     <property name="editTriggers">
      <set>QAbstractItemView::NoEditTriggers</set>
     </property>
     <property name="selectionMode">
      <enum>QAbstractItemView::SingleSelection</enum>
     </property>
     <property name="selectionBehavior">
      <enum>QAbstractItemView::SelectRows</enum>
     </property>
     <property name="textElideMode">
      <enum>Qt::ElideMiddle</enum>
     </property>
     <attribute name="horizontalHeaderCascadingSectionResizes">
      <bool>false</bool>
     </attribute>
     <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
      <bool>false</bool>
     </attribute>
     <attribute name="horizontalHeaderStretchLastSection">
      <bool>true</bool>
     </attribute>
     <attribute name="verticalHeaderVisible">
      <bool>false</bool>
     </attribute>
     <column>
      <property name="text">
       <string>名称</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>说明</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>最小值</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>最大值</string>
      </property>
     </column>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_4">
     <item>
      <spacer name="horizontalSpacer_2">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="addAxisButton">
       <property name="text">
        <string>增加</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="deleteButton">
       <property name="text">
        <string>删除</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="moveUpButton">
       <property name="text">
        <string>上移</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="moveDownButton">
       <property name="text">
        <string>下移</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="propertyButton">
       <property name="text">
        <string>属性</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QCheckBox" name="autoHideCheckBox">
     <property name="text">
      <string>自动隐藏Y轴(当无绑定曲线时,或绑定曲线不可见时,自动隐藏)</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <tabstops>
  <tabstop>scaleLineEdit</tabstop>
  <tabstop>mainBisectrixLineEdit</tabstop>
  <tabstop>mainBisectrixButton</tabstop>
  <tabstop>secondaryBisectrixLineEdit</tabstop>
  <tabstop>secondaryBisectrixButton</tabstop>
  <tabstop>axisTableWidget</tabstop>
  <tabstop>addAxisButton</tabstop>
  <tabstop>deleteButton</tabstop>
  <tabstop>propertyButton</tabstop>
  <tabstop>autoHideCheckBox</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
